index.html/css blev mos med formuläret. återställer i denna commit.

--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ html, body {
 .func {
 	display: inline-block;
 	width: 67.5%;
-	/*height: 36%;*/
+	height: 36%;
 }
 
 .deliveryInfo {
@@ -108,11 +108,7 @@ html, body {
 
 .btmr {
 	margin:auto 0 0 auto;
-	text-align: right;
-	
-
-	
-	
+	text-align: right;	
 }
 
 .red {
